--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         .container {
             margin: auto;
-            width: 500px;
+            width: 600px;
             background-color: bisque;
         }
 
@@ -53,17 +53,19 @@
             <div class="row">
                 <div class="col-6">
                     <div class="mb-3">
-                        <label for="weight" class="form-label">Your Weight</label>
-                        <input type="text" class="form-control" id="weight" placeholder="Please enter your weight (kg)">
+                        <label for="weight" class="form-label">Your weight <span
+                                class="badge bg-warning text-dark rounded">kg</span></label>
+                        <input type="number" class="form-control" id="weight" placeholder="Enter your weight (kg)">
                     </div>
                     <div class="mb-3">
-                        <label for="height" class="form-label">Your height</label>
-                        <input type="text" class="form-control" id="height" placeholder="Please enter your height (m)">
+                        <label for="height" class="form-label">Your height <span
+                                class="badge bg-warning text-dark rounded">cm</span></label>
+                        <input type="number" class="form-control" id="height" placeholder="Enter your height (cm)">
                     </div>
                 </div>
                 <div class="col-6">
                     <button id="myBtn" class="btn btn-outline-primary float-end w-100" type="button">BMI</button>
-                    <span id="result" class="float-end d-block badge p-2"></span>
+                    <span id="result" class="float-end badge p-3 mb-5"></span>
                 </div>
             </div>
         </form>
@@ -76,34 +78,41 @@
         function calculateBmi() {
             let weight = document.getElementById("weight").value;
             let height = document.getElementById("height").value;
-            let bmi = parseFloat(weight) / (parseFloat(height) * parseFloat(height));
+            let bmi = weight / ((parseFloat(height) / 100) * (parseFloat(height) / 100));
+            bmi = bmi.toFixed(2);
             var result = document.getElementById("result");
-            if (bmi < 18.5) {
-                result.innerHTML = bmi;
-                result.classList.remove("normal");
-                result.classList.remove("overweight");
-                result.classList.remove("obese");
-                result.classList.add("skinny");
-            }
-            else if (bmi >= 18.5 && bmi <= 24.99) {
-                result.innerHTML = bmi;
-                result.classList.remove("skinny");
-                result.classList.remove("overweight");
-                result.classList.remove("obese");
-                result.classList.add("normal");
-            }
-            else if (bmi >= 25 && bmi <= 29.99) {
-                result.innerHTML = bmi;
-                result.classList.remove("normal");
-                result.classList.remove("skinny");
-                result.classList.remove("obese");
-                result.classList.add("overweight");
+            if (weight == "" || height == "") {
+                alert("Please enter your weight and height");
+            } if ((weight <= 0) || (height <= 0)) {
+                alert("They must be bigger then zero");
             } else {
-                result.innerHTML = bmi;
-                result.classList.remove("normal");
-                result.classList.remove("skinny");
-                result.classList.remove("obese");
-                result.classList.add("obese");
+                if (bmi < 18.5) {
+                    result.innerHTML = "You are underweight and your bmi is  :" + bmi;
+                    result.classList.remove("normal");
+                    result.classList.remove("overweight");
+                    result.classList.remove("obese");
+                    result.classList.add("skinny");
+                }
+                else if (bmi >= 18.5 && bmi <= 24.99) {
+                    result.innerHTML = "You are normal and your bmi is  :" + bmi;
+                    result.classList.remove("skinny");
+                    result.classList.remove("overweight");
+                    result.classList.remove("obese");
+                    result.classList.add("normal");
+                }
+                else if (bmi >= 25 && bmi <= 29.99) {
+                    result.innerHTML = "You are overweight and your bmi is  :" + bmi;
+                    result.classList.remove("normal");
+                    result.classList.remove("skinny");
+                    result.classList.remove("obese");
+                    result.classList.add("overweight");
+                } else {
+                    result.innerHTML = "You are obese and your bmi is  :" + bmi;
+                    result.classList.remove("normal");
+                    result.classList.remove("skinny");
+                    result.classList.remove("obese");
+                    result.classList.add("obese");
+                }
             }
         }
 
